[package]
name = "katexit-example"
description = "Rendered example of katexit"
documentation = "https://docs.rs/katexit-example"

version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies.katexit]
version = "0.1.6"
path = "../katexit"
