[package]
name = "katexit"
version = "0.1.1"
edition = "2018"
description = "Insert KaTeX autorender script into rustdoc"
documentation = "https://docs.rs/katexit"
license = "Apache-2.0"
repository = "https://github.com/termoshtt/katexit"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.9"
proc-macro2 = "1.0.28"
syn = { version = "1.0.75", features = ["full", "extra-traits"] }
