[package]
name = "katexit"
version = "0.1.4"
edition = "2018"
description = "Insert KaTeX autorender script into rustdoc"
documentation = "https://docs.rs/katexit"
license = "Apache-2.0"
repository = "https://github.com/termoshtt/katexit"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.25"
proc-macro2 = "1.0.60"
syn = { version = "2.0.0", features = ["full", "extra-traits"] }
