[package]
name = "katexit"
description = "Insert KaTeX autorender script into rustdoc"
documentation = "https://docs.rs/katexit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
proc-macro2 = "1.0.95"
syn = { version = "2.0.101", features = ["full", "extra-traits"] }
